crates/icydb-core/tests/ui/db/response_alias_removed.stderr
error[E0432]: unresolved import `icydb_core::db::Response`
 --> tests/ui/db/response_alias_removed.rs:1:5
  |
1 | use icydb_core::db::Response;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^ no `Response` in `db`
  |
help: a similar name exists in the module
  |
1 - use icydb_core::db::Response;
1 + use icydb_core::db::response;
  |
