crates/icydb-core/tests/ui/db/response_alias_removed.rs
use icydb_core::db::Response;

fn main() {}
